assets/theme.css
/* ... */
@media (-moz-touch-enabled: 0), (hover: hover) {
  .features--show-button-transition .Button--primary:not([disabled]):hover,
  .features--show-button-transition .shopify-payment-button__button--unbranded:not([disabled]):hover,
  .features--show-button-transition .spr-summary-actions-newreview:not([disabled]):hover,
  .features--show-button-transition .spr-button-primary:not(input):not([disabled]):hover {
    color: var(--button-background);
    background-color: transparent;
  }
}

.Button--secondary,
.spr-pagination-prev > a,
.spr-pagination-next > a {
  color: var(--text-color-light);
  border: 1px solid rgba(var(--text-color-light-rgb), 0.2);
}

.Button--secondary::before,
.spr-pagination-prev > a::before,
.spr-pagination-next > a::before {
  background-color: var(--button-background);
  transform-origin: right center;
  transform: scale(0, 1);
}

@media (-moz-touch-enabled: 0), (hover: hover) {
  .features--show-button-transition .Button--secondary:not([disabled]):hover,
  .features--show-button-transition .spr-pagination-prev > a:not([disabled]):hover,
  .features--show-button-transition .spr-pagination-next > a:not([disabled]):hover {
    color: var(--button-text-color);
    border-color: var(--button-background);
  }

  .features--show-button-transition .Button--secondary:not([disabled]):hover::before,
  .features--show-button-transition .spr-pagination-prev > a:not([disabled]):hover::before,
  .features--show-button-transition .spr-pagination-next > a:not([disabled]):hover::before {
    transform-origin: left center;
    transform: scale(1, 1);
  }
}

.Button--full {
  width: 100%;
}

.Button--stretched {
  padding-left: 40px;
  padding-right: 40px;
}

.Button--small {
  font-size: calc(var(--base-text-font-size) - (var(--default-text-font-size) - 10px));
  padding: 12px 24px;
}

.Button__SeparatorDot {
  display: inline-block;
  margin: 0 18px;
  content: '';
  height: 3px;
  width: 3px;
  border-radius: 100%;
  background: currentColor;
}

.ButtonWrapper {
  text-align: center;
}

/* We allow those buttons to have secondary state. The secondary state is displayed (for instance during loading time) when
   the class "Button--secondaryState" is added */
.Button__PrimaryState,
.Button__SecondaryState {
  display: block;
  transition: transform 0.4s cubic-bezier(0.75, 0, 0.125, 1), opacity 0.4s cubic-bezier(0.75, 0, 0.125, 1);
}

.Button__SecondaryState {
  position: absolute;
  left: 50%;
  top: 50%;
  width: 100%;
  text-align: center;
  opacity: 0;
  transform: translate(-50%, 100%);
}

.Button--secondaryState .Button__PrimaryState {
  opacity: 0;
  transform: translateY(-100%);
}
.Button--secondaryState .Button__SecondaryState {
  opacity: 1;
  transform: translate(-50%, -50%);
}

/**
 * ----------------------------------------------------------------------------
 * Button group
 * ----------------------------------------------------------------------------
 */

.ButtonGroup {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: -12px;
}

.ButtonGroup__Item {
  margin: 12px;
}

.ButtonGroup__Item--expand {
  flex: 1 1 0;
}

.ButtonGroup--spacingSmall {
  margin: -8px;
}
.ButtonGroup--spacingSmall .ButtonGroup__Item {
  margin: 8px;
}

.ButtonGroup--sameSize .ButtonGroup__Item {
  flex: 0 1 auto;
  white-space: nowrap;
  max-width: 245px;
}

@supports ((-o-object-fit: cover) or (object-fit: cover)) {
  .ButtonGroup--sameSize .ButtonGroup__Item {
    flex: 1 1 0;
    /* There is a bug in IE11 so we're forced to use this trick */
  }
}

@media screen and (min-width: 641px) {
  @supports (display: inline-grid) {
    .ButtonGroup--sameSize {
      display: inline-grid;
      grid-template-columns: 1fr 1fr;
    }

    .ButtonGroup--sameSize .ButtonGroup__Item {
      max-width: none;
    }
  }
}

/**
 * ----------------------------------------------------------------------------
 * Round button
 *
 * Those buttons are not really button like the others, but they are used in
 * lot of different places to hold things like icons
 * ----------------------------------------------------------------------------
 */

.RoundButton,
.flickity-prev-next-button {
  position: relative;
  width: 45px;
  height: 45px;
  border: none;
  border-radius: 50%;
  background: var(--button-text-color);
  color: var(--button-background);
  cursor: pointer;
  border:1px solid #D06146;
  text-align: center;
  z-index: 1;
  box-shadow: 0 2px 10px rgba(54, 54, 54, 0.15);
  vertical-align: middle;
  line-height: 0;
  transform: scale(1.001); /* Avoid rounding error during animation in Chrome */
  transition: background 0.15s ease-in-out, opacity 0.15s ease-in-out, transform 0.2s ease-in-out, color 0.2s ease-in-out;
  overflow: hidden;
}

.RoundButton.is-active,
.flickity-prev-next-button.is-active {
  background: var(--button-background);
  color: var(--button-text-color);
  outline: none;
}

.RoundButton svg,
.flickity-prev-next-button svg {
  height: 15px;
  width: 15px;
  fill: currentColor;
}

.RoundButton--small {
  width: 35px;
  height: 35px;
}
.RoundButton--small svg {
  height: 14px;
  width: 14px;
}

.RoundButton--medium {
  width: 50px;
  height: 50px;
}

.RoundButton--medium svg {
  height: 18px;
  width: 18px;
}

.RoundButton--large {
  width: 55px;
  height: 55px;
}
.RoundButton--large svg {
  height: 15px;
  width: 15px;
}

.RoundButton--flat {
  box-shadow: 0 1px 5px rgba(54, 54, 54, 0.15);
  color: rgba(var(--button-background-rgb), 0.5);
}

/* We allow those buttons to have secondary state. The secondary state is displayed (for instance during loading time) when
   the class "RoundButton--withSecondaryState" is added */
.RoundButton__PrimaryState,
.RoundButton__SecondaryState {
  display: block;
  transition: transform 0.4s cubic-bezier(0.75, 0, 0.125, 1), opacity 0.4s cubic-bezier(0.75, 0, 0.125, 1);
}
/* ... */

